$Id$                       -*-text-*-



**** 0.74 [unreleased]

Fix rt.cpan.org #91241

	TSIG: Fix incorrectly generated %algbyval table.

Fix rt.cpan.org #81760

	TXT: Revert rdatastr() workaraound for SpamAssassin.

Feature

	Add CAA, EUI48 and EUI64 RR implementation.


**** 0.73 Nov 29, 2013

Fix rt.cpan.org #88778

	$update->unique_push() does not work as advertised.

Fix rt.cpan.org #88744

	Nameserver crashes on malformed TCP query.

Fix rt.cpan.org #84601/#81942

	Fix memory leak on packet cleanup. Indirect self-reference via
	header prevented garbage collector from deallocating packet.

Feature rt.cpan.org #84468

	TSIG: add support for HMAC-SHA1 .. HMAC-SHA512

Fix rt.cpan.org #84110

	Incorrect parsing of PTR records in zonefile.

Fix rt.cpan.org #83755

	Erroneous attempt to invoke Net::LibIDN package in Domain.pm.

Fix rt.cpan.org #83078

	Can't locate Net/DNS/Resolver/linux.pm in @INC
	Conjecture:  eval{ ... };  if ($@) { ... };  broken by threads.

Fix rt.cpan.org #83075

	ZoneFile.pm wrongly rejects $TTL 0 directive.

Fix rt.cpan.org #82621

	Error string empty after failed TCP query.

Fix rt.cpan.org #82296

	IPv6 with embedded IPv4 address not mapped to ip6.arpa.

Fix rt.cpan.org #82294

	Perl taint inadvertently removed in Domain and Text objects.

Feature rt.cpan.org #53610

	add TSIG validation support


**** 0.72 Dec 28, 2012

Fix rt.cpan.org #82148

	nxrrset fails to ignore RDATA.

Fix rt.cpan.org #82134

	TSIG key and algorithm names not downcased in digest.
	Class not forced to ANY.

Fix rt.cpan.org #82063

	yxrrset, nxrrset and rr_del functions should force zero TTL.

Fix rt.cpan.org #82047
 
	Clarify documentation to indicate that header counts may
	differ from the number of RRs present if a packet is corrupt.

Fix rt.cpan.org #81941

	Clarify documentation to make users aware that bgread will not
	switch to TCP when a truncated packet is received.


**** 0.71 Dec 15, 2012

Temporary workaround rt.cpan.org #81760
